--- a/challenge-27/index.html
+++ b/challenge-27/index.html
@@ -12,6 +12,10 @@
         Challenge 27
     </h1>
 
+    <a href="#" data-js="link">link 1</a>
+    <a href="#" data-js="link">link 2</a>
+    <a href="#" data-js="link">link 3</a>
+
     <script src="challenge-27.js"></script>
     
 </body>
