--- a/challenge-28/index.html
+++ b/challenge-28/index.html
@@ -43,6 +43,7 @@
         </div>
     </form>
         
+    <script src="dom.js"></script>
     <script src="challenge-28.js"></script>
     <!-- <script src="appViaCep.js"></script> -->
     <!-- <script src="appViaCep2.js"></script> -->
