--- a/challenge-28/index.html
+++ b/challenge-28/index.html
@@ -43,9 +43,9 @@
         </div>
     </form>
         
-    <script src="dom.js"></script>
-    <script src="challenge-28.js"></script>
-    <!-- <script src="appViaCep.js"></script> -->
+    <!-- <script src="dom.js"></script> -->
+    <!-- <script src="challenge-28.js"></script> -->
+    <script src="appViaCep.js"></script>
     <!-- <script src="appViaCep2.js"></script> -->
 
 </body>
