--- a/challenge-29/index.html
+++ b/challenge-29/index.html
@@ -21,6 +21,7 @@
         }
         label {
             display: block;
+            padding: 5px 0;
         }
         input {
             padding: 5px;
@@ -63,31 +64,31 @@
                 <label>
                     Imagem do carro: 
                 </label>
-                <input type="url">
+                <input type="url" data-js="image">
             </li>
             <li>
                 <label>
                     Marca / Modelo: 
                 </label>
-                <input type="text">
+                <input type="text" data-js="brand-model">
             </li>
             <li>
                 <label>
                     Ano:
                 </label>
-                <input type="text">
+                <input type="text" data-js="year">
             </li>
             <li>
                 <label>
                     Placa: 
                 </label>
-                <input type="text">
+                <input type="text" data-js="plate">
             </li>
             <li>
                 <label>
                     Cor: 
                 </label>
-                <input type="text">
+                <input type="text" data-js="color">
             </li>
             <li>
                 <button type="submit">
@@ -107,11 +108,11 @@
                 <th>Cor</th>
             </tr>            
         </thead>
-        <tbody></tbody>
+        <tbody data-js="table-car"></tbody>
     </table>
 
+    <script src="dom.js"></script>
     <script src="challenge-29.js"></script>
-    <script src="company.json"></script>
 
 </body>
 </html>
